--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,12 @@
 
 body {
     font-family: sans-serif;
+    margin: 0;
 }
 
 main {
-    margin-top: 150px;
+    margin: 150px auto 0 auto;
+    max-width: 1500px;
 }
 
 /*NAVIGATION MENU*/
@@ -50,7 +52,6 @@ nav {
 nav ul {
     display: flex;
     list-style-type: none;
-    justify-content: flex-end;
     justify-content: space-around;
 }
 
@@ -111,6 +112,10 @@ input::placeholder {
     margin-left: -50px;
 }
 
+.duck-features p {
+    line-height: 1.5rem;
+}
+
 .f1, .f2, .f3 {
     padding-right: 50px;
 }
@@ -119,6 +124,84 @@ input::placeholder {
     display: flex;
     align-items: center; 
     justify-content: center;
+}
+
+/*EMBEDED YOUTUBE VIDEO*/
+
+iframe {
+    display: block;
+    margin: 50px auto;
+    width: 560px;
+    height: 315px;
+}
+
+/*PRICING ELEMENTS*/
+
+.hidden {
+    display: none
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 50px 0;
+}
+
+.container > * {
+    width: 350px;
+    height: auto;
+    padding: 0;
+    text-align: center;
+    border: solid 1px black;
+    margin: 10px;
+}
+
+.container h3 {
+    width: 100%;
+    background-color: #d6cfd6;
+    margin: 0;
+    padding: 15px 0;
+    font-size: 1.5rem;
+}
+
+.container h4 {
+    font-size: 2rem;
+    margin: 20px;
+    padding: 0;
+}
+
+#button {
+    border-radius: 0;
+    border-style: none;
+    padding: 10px 10px;
+    background-color: yellow;
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin: 20px 0 20px;
+}
+
+#button:hover {
+    cursor: pointer;
+}
+
+#button:active {
+    background-color: orange;
+}
+
+/*FOOTER*/
+
+footer {
+    width: 100%;
+    background-color: #d6cfd6;
+    max-width: 1100px;
+    margin: 30px auto 0 auto;
+    padding: 5px 10px;
+    text-align: end;
+}
+
+footer p:last-child  {
+    font-size: 0.9rem;
 }
 
 /*MEDIA SCREEN FOR MOBILE AND TABLET*/
@@ -150,7 +233,6 @@ input::placeholder {
 
     nav ul {
         display: flex;
-        justify-content: center !important;
         justify-content: space-around !important;
     }
 
@@ -179,19 +261,37 @@ input::placeholder {
         display: block;
         margin: 20px auto;
     }
+
+    /*EMBEDED YOUTUBE VIDEO*/
+
+    iframe {
+        width: 450px;
+        height : 270px;
+    }
 }
 
-/*MEDIA QUERY FOR MOBILE-FIXED CENTERING TITLE WITH IMAGE CHANGING THE WIDTH*/
+/*MEDIA QUERIES FOR MOBILE*/
 
 @media screen and (max-width: 408px) {
+    /*TITLE NAVIGATION MENU*/
+    
     .title-with-logo {
         justify-content: center;
         width: 70%;
     }
 
+     /*EMBEDED YOUTUBE VIDEO*/
+
+     iframe {
+        width: 250px;
+        height: 150px;
+    }
+
 }
 
 @media screen and (max-width: 542px) {
+    /*FEATURE ELEMENTS*/
+    
     .duck-features img {
         display: none;
     }
@@ -201,4 +301,48 @@ input::placeholder {
         padding: 0;
         margin: 10px 30px;
     }
+
+    .duck-features {
+        margin: 0 10px;
+    }
+
+   /*PRICING ELEMENTS*/
+
+    .container > * {
+        width: 300px;
+    }
+    
+    .container h3 {
+        font-size: 1.1rem;
+    }
+
+    .container h4 {
+        font-size: 1.7rem;
+    }
+
+    .container p {
+        font-size: 0.9rem;
+    }
+
+    #button {
+        font-size: 1.3rem;
+    }
 }
+
+ /*EMBEDED YOUTUBE VIDEO*/
+
+@media screen and (max-width: 520px) {
+    iframe {
+        width: 350px;
+        height: 200px;
+        }
+}
+
+/*MAKES THE WRAPPED PRICING BOXES ALIGN FROM LEFT INSTEAD FROM CENTER BY ADDING AN EXTRA HIDDEN DIV ELEMET*/
+
+/*@media screen and (max-width: 1142px) {
+    .hidden {
+        visibility: hidden;
+        display: block;
+    }
+}*/
